2006-03-12	Richard van den Berg  <richard@vdberg.org>
	* Mordernize use of AM_INIT_AUTOMAKE

2006-02-26	Richard van den Berg  <richard@vdberg.org>
	* Use @sysconfdir@ as directory in aide.1, SF bug #1438995

2006-02-23	Richard van den Berg  <richard@vdberg.org>
	* Set AIDEVERSION right after including config.h
	* Added note about SIGTERM (Marc Haber)

2006-02-18	Richard van den Berg  <richard@vdberg.org>
	* Released version 0.11
	* Changed version to post-0.11

2006-02-14	Richard van den Berg  <richard@vdberg.org>
	* Fix the broken @@ifhost and @@ifnhost directives by lcn2 (SF bug #1430482)

2006-02-09	Richard van den Berg  <richard@vdberg.org>
	* Fall back to strtoimax if strtoll is not available
	* Protect against non existing syslog facilities
	* Updated aide.spec.in as suggested in SF bug #1428576

2006-02-08	Richard van den Berg  <richard@vdberg.org>
	* Explicitly check for readdir64, by Virolainen Pablo <pablo@cs.tut.fi>
	* Added note about --disable-lfs in README

2006-01-30	Richard van den Berg  <richard@vdberg.org>
	* Released version 0.11-rc3
	* Changed version to post-0.11-rc3

2006-01-29	Richard van den Berg  <richard@vdberg.org>
	* Fix layout of aide.conf.5 by Vincent Danen <vdanen@linsec.ca>
	* Cleanup --help output by Vincent Danen <vdanen@linsec.ca>
	* Add separators in --check output by Vincent Danen <vdanen@linsec.ca>
	* Add --disable-lfs option to configure

2006-01-22	Richard van den Berg  <richard@vdberg.org>
	* Allow report_url to change syslog facility
	* Only warn when DB_CHECKINODE and DB_CTIME are used together
	* Added GPG scripts by Vincent Danen <vdanen@linsec.ca>

2005-12-19	Richard van den Berg  <richard@vdberg.org>
	* Revert check_list_for_match to old behaviour (Marc Haber)
	* Documentation update (Marc Haber)

2005-12-12	Richard van den Berg  <richard@vdberg.org>
	* Log tree matching verbosely, patch by Virolainen Pablo <pablo@cs.tut.fi>

2005-11-15	Richard van den Berg  <richard@vdberg.org>