@@ -1,5 +1,5 @@
 %define name     aide
-%define ver      @VERSION@
+%define ver      @AIDEVERSION@
 %define rel      1
 %define prefix   /usr
 
@@ -9,7 +9,7 @@ Version: %ver
 Release: %rel
 Copyright: GPL
 Group: Console/Security
-Source: http://prdownloads.sourceforge.net/aide/aide-@VERSION@.tar.gz
+Source: http://prdownloads.sourceforge.net/aide/aide-@AIDEVERSION@.tar.gz
 BuildRoot: /var/tmp/aide-%{PACKAGE_VERSION}-root
 Obsoletes: %name
 URL: http://sourceforge.net/projects/aide
