@@ -1,8 +1,12 @@
+m4_include([version.m4])
 
 dnl Initialize autoconf/automake
-AC_INIT(aide, post-0.11)
+AC_INIT(aide, AIDE_VERSION)
 AC_CONFIG_SRCDIR(src/aide.c)
 AM_INIT_AUTOMAKE
+
+AC_DEFINE_UNQUOTED(AIDEVERSION, "AIDE_VERSION")
+AH_TEMPLATE([AIDEVERSION], [package version])
 
 dnl The name of the configure h-file.
 AM_CONFIG_HEADER(config.h)
