@@ -1,0 +1,1 @@
+m4_define([AIDE_VERSION], [post-0.11])
